*Empty MediaWiki Message*

--- a/13_tuber.mw
+++ b/13_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''13 [[tuber]]''' d ass {{exp|wis}}286 n useggas ({{exp|wis}}287 deg iseggasen ''bisekstil''). Llan 79 wussan deffir-s ar taggara n useggas.
+Ass '''13 [[tuber]]''' d ass wis 286 n useggas (wis 287 deg iseggasen ''bisekstil''). Llan 79 wussan deffir-s ar taggara n useggas.
 <center>[[12 tuber]] - ''13 tuber'' - [[14 tuber]]</center>
 
 == Tidyanin ==
@@ -11,7 +11,5 @@ Ass '''13 [[tuber]]''' d ass {{exp|wis}}286 n useggas ({{exp|wis}}287 deg isegga
 |commons=Category:13 october
 |commons azwel=13 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 [[Taggayt:Ass n tuber]]
