*Empty MediaWiki Message*

--- a/14_tuber.mw
+++ b/14_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''14 [[tuber]]''' d ass {{exp|wis}}287 n useggas ({{exp|wis}}288 deg iseggasen ''bisekstil''). Llan 78 wussan deffir-es ar taggara n useggas.
+Ass '''14 [[tuber]]''' d ass wis 287 n useggas (wis 288 deg iseggasen ''bisekstil''). Llan 78 wussan deffir-s ar taggara n useggas.
 <center>[[13 tuber]] - ''14 tuber'' - [[15 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,7 @@ Ass '''14 [[tuber]]''' d ass {{exp|wis}}287 n useggas ({{exp|wis}}288 deg isegga
 |commons=Category:14 october
 |commons azwel=14 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
