*Empty MediaWiki Message*

--- a/15_tuber.mw
+++ b/15_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''15 [[tuber]]''' d ass {{exp|wis}}288 n useggas ({{exp|wis}}289 deg iseggasen ''bisekstil''). Llan 77 wussan deffir-s ar taggara n useggas.
+Ass '''15 [[tuber]]''' d ass wis288 n useggas (wis 289 deg iseggasen ''bisekstil''). Llan 77 wussan deffir-s ar taggara n useggas.
 <center>[[14 tuber]] - ''15 tuber'' - [[16 tuber]]</center>
 
 == Tidyanin ==
@@ -11,8 +11,7 @@ Ass '''15 [[tuber]]''' d ass {{exp|wis}}288 n useggas ({{exp|wis}}289 deg isegga
 |commons=Category:15 october
 |commons azwel=15 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
