*Empty MediaWiki Message*

--- a/16_tuber.mw
+++ b/16_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''16 [[tuber]]''' d ass {{exp|wis}}289 n useggas ({{exp|wis}}290 deg iseggasen ''bisekstil''). Llan 76 wussan deffir-s ar taggara n useggas.
+Ass '''16 [[tuber]]''' d ass wis 289 n useggas (wis 290 deg iseggasen ''bisekstil''). Llan 76 wussan deffir-s ar taggara n useggas.
 <center>[[15 tuber]] - ''16 tuber'' - [[17 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,7 +7,6 @@ Ass '''16 [[tuber]]''' d ass {{exp|wis}}289 n useggas ({{exp|wis}}290 deg isegga
 |commons=Category:16 october
 |commons azwel=16 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
