*Empty MediaWiki Message*

--- a/17_tuber.mw
+++ b/17_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''17 [[tuber]]''' d ass {{exp|wis}}290 n useggas ({{exp|wis}}291 deg iseggasen ''bisekstil''). Llan 75 wussan deffir-s ar taggara n useggas.
+Ass '''17 [[tuber]]''' d ass wis 290 n useggas (wis 291 deg iseggasen ''bisekstil''). Llan 75 wussan deffir-s ar taggara n useggas.
 <center>[[16 tuber]] - ''17 tuber'' - [[18 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,7 @@ Ass '''17 [[tuber]]''' d ass {{exp|wis}}290 n useggas ({{exp|wis}}291 deg isegga
 |commons=Category:17 october
 |commons azwel=17 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
