*Empty MediaWiki Message*

--- a/18_tuber.mw
+++ b/18_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''18 [[tuber]]''' d ass {{exp|wis}}291 n useggas ({{exp|wis}}292 deg iseggasen ''bisekstil''). Llan 74 wussan deffir-s ar taggara n useggas.
+Ass '''18 [[tuber]]''' d ass wis 291 n useggas (wis 292 deg iseggasen ''bisekstil''). Llan 74 wussan deffir-s ar taggara n useggas.
 <center>[[17 tuber]] - ''18 tuber'' - [[19 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''18 [[tuber]]''' d ass {{exp|wis}}291 n useggas ({{exp|wis}}292 deg isegga
 |commons=Category:18 october
 |commons azwel=18 tuber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
