*Empty MediaWiki Message*

--- a/19_tuber.mw
+++ b/19_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''19 [[tuber]]''' d ass {{exp|wis}}292 n useggas ({{exp|wis}}293 deg iseggasen ''bisekstil''). Llan 73 wussan deffir-s ar taggara n useggas.
+Ass '''19 [[tuber]]''' d ass wis 292 n useggas (wis 293 deg iseggasen ''bisekstil''). Llan 73 wussan deffir-s ar taggara n useggas.
 <center>[[18 tuber]] - ''19 tuber'' - [[20 tuber]]</center>
 
 == Tidyanin ==
@@ -13,7 +13,6 @@ Ass '''19 [[tuber]]''' d ass {{exp|wis}}292 n useggas ({{exp|wis}}293 deg isegga
 |commons=Category:19 october
 |commons azwel=19 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
