*Empty MediaWiki Message*

--- a/20_tuber.mw
+++ b/20_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''20 [[tuber]]''' d ass {{exp|wis}}293 n useggas ({{exp|wis}}294 deg iseggasen ''bisekstil''). Llan 72 wussan deffir-s ar taggara n useggas.
+Ass '''20 [[tuber]]''' d ass wis 293 n useggas (wis 294 deg iseggasen ''bisekstil''). Llan 72 wussan deffir-s ar taggara n useggas.
 <center>[[19 tuber]] - ''20 tuber'' - [[21 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''20 [[tuber]]''' d ass {{exp|wis}}293 n useggas ({{exp|wis}}294 deg isegga
 |commons=Category:20 october
 |commons azwel=20 tuber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
