*Empty MediaWiki Message*

--- a/21_tuber.mw
+++ b/21_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''21 [[tuber]]''' d ass {{exp|wis}}294 n useggas ({{exp|wis}}295 deg iseggasen ''bisekstil''). Llan 71 wussan deffir-s ar taggara n useggas.
+Ass '''21 [[tuber]]''' d ass wis 294 n useggas (wis 295 deg iseggasen ''bisekstil''). Llan 71 wussan deffir-s ar taggara n useggas.
 <center>[[20 tuber]] - ''21 tuber'' - [[22 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''21 [[tuber]]''' d ass {{exp|wis}}294 n useggas ({{exp|wis}}295 deg isegga
 |commons=Category:21 october
 |commons azwel=21 tuber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
