*Empty MediaWiki Message*

--- a/22_tuber.mw
+++ b/22_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''22 [[tuber]]''' d ass {{exp|wis}}295 n useggas ({{exp|wis}}296 deg iseggasen ''bisekstil''). Llan 70 wussan deffir-s ar taggara n useggas.
+Ass '''22 [[tuber]]''' d ass wis 295 n useggas (wis 296 deg iseggasen ''bisekstil''). Llan 70 wussan deffir-s ar taggara n useggas.
 <center>[[21 tuber]] - ''22 tuber'' - [[23 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''22 [[tuber]]''' d ass {{exp|wis}}295 n useggas ({{exp|wis}}296 deg isegga
 |commons=Category:22 october
 |commons azwel=22 tuber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
