*Empty MediaWiki Message*

--- a/23_tuber.mw
+++ b/23_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''23 [[tuber]]''' d ass {{exp|wis}}296 n useggas ({{exp|wis}}297 deg iseggasen ''bisekstil''). Llan 69 wussan deffir-s ar taggara n useggas.
+Ass '''23 [[tuber]]''' d ass wis 296 n useggas (wis 297 deg iseggasen ''bisekstil''). Llan 69 wussan deffir-s ar taggara n useggas.
 <center>[[22 tuber]] - ''23 tuber'' - [[24 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,6 @@ Ass '''23 [[tuber]]''' d ass {{exp|wis}}296 n useggas ({{exp|wis}}297 deg isegga
 |commons=Category:23 october
 |commons azwel=23 tuber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
