*Empty MediaWiki Message*

--- a/24_tuber.mw
+++ b/24_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''24 [[tuber]]''' d ass {{exp|wis}}297 n useggas ({{exp|wis}}298 deg iseggasen ''bisekstil''). Llan 68 wussan deffir-s ar taggara n useggas.
+Ass '''24 [[tuber]]''' d ass wis 297 n useggas (wis 298 deg iseggasen ''bisekstil''). Llan 68 wussan deffir-s ar taggara n useggas.
 <center>[[23 tuber]] - ''24 tuber'' - [[25 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,7 +7,6 @@ Ass '''24 [[tuber]]''' d ass {{exp|wis}}297 n useggas ({{exp|wis}}298 deg isegga
 |commons=Category:24 october
 |commons azwel=24 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
