*Empty MediaWiki Message*

--- a/25_tuber.mw
+++ b/25_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''25 [[tuber]]''' d ass {{exp|wis}}298 n useggas ({{exp|wis}}299 deg iseggasen ''bisekstil''). Llan 67 wussan deffir-s ar taggara n useggas.
+Ass '''25 [[tuber]]''' d ass wis 298 n useggas (wis 299 deg iseggasen ''bisekstil''). Llan 67 wussan deffir-s ar taggara n useggas.
 <center>[[24 tuber]] - ''25 tuber'' - [[26 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''25 [[tuber]]''' d ass {{exp|wis}}298 n useggas ({{exp|wis}}299 deg isegga
 |commons=Category:25 october
 |commons azwel=25 tuber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
