*Empty MediaWiki Message*

--- a/26_tuber.mw
+++ b/26_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''26 [[tuber]]''' d ass {{exp|wis}}299 n useggas ({{exp|wis}}300 deg iseggasen ''bisekstil''). Llan 66 wussan deffir-s ar taggara n useggas.
+Ass '''26 [[tuber]]''' d ass wis 299 n useggas (wis 300 deg iseggasen ''bisekstil''). Llan 66 wussan deffir-s ar taggara n useggas.
 <center>[[25 tuber]] - ''26 tuber'' - [[27 tuber]]</center>
 
 == Tidyanin ==
@@ -15,8 +15,7 @@ Ass '''26 [[tuber]]''' d ass {{exp|wis}}299 n useggas ({{exp|wis}}300 deg isegga
 |commons=Category:26 october
 |commons azwel=26 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
