*Empty MediaWiki Message*

--- a/27_tuber.mw
+++ b/27_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''27 [[tuber]]''' d ass {{exp|wis}}300 n useggas ({{exp|wis}}301 deg iseggasen ''bisekstil''). Llan 65 wussan deffir-s ar taggara n useggas.
+Ass '''27 [[tuber]]''' d ass wis 300 n useggas (wis 301 deg iseggasen ''bisekstil''). Llan 65 wussan deffir-s ar taggara n useggas.
 <center>[[26 tuber]] - ''27 tuber'' - [[28 tuber]]</center>
 == Tidyanin ==
 === Timiḍi wis 21 ===
@@ -10,7 +10,6 @@ Ass '''27 [[tuber]]''' d ass {{exp|wis}}300 n useggas ({{exp|wis}}301 deg isegga
 |commons=Category:27 october
 |commons azwel=27 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
