*Empty MediaWiki Message*

--- a/28_tuber.mw
+++ b/28_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''28 [[tuber]]''' d ass {{exp|wis}}301 n useggas ({{exp|wis}}302 deg iseggasen ''bisekstil''). Llan 64 wussan deffir-s ar taggara n useggas.
+Ass '''28 [[tuber]]''' d ass wis 301 n useggas (wis 302 deg iseggasen ''bisekstil''). Llan 64 wussan deffir-s ar taggara n useggas.
 <center>[[27 tuber]] - ''28 tuber'' - [[29 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,7 +7,6 @@ Ass '''28 [[tuber]]''' d ass {{exp|wis}}301 n useggas ({{exp|wis}}302 deg isegga
 |commons=Category:28 october
 |commons azwel=28 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
