*Empty MediaWiki Message*

--- a/29_tuber.mw
+++ b/29_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''29 [[tuber]]''' d ass {{exp|wis}}302 n useggas ({{exp|wis}}303 deg iseggasen ''bisekstil''). Llan 63 wussan deffir-s ar taggara n useggas.
+Ass '''29 [[tuber]]''' d ass wis 302 n useggas (wis 303 deg iseggasen ''bisekstil''). Llan 63 wussan deffir-s ar taggara n useggas.
 <center>[[28 tuber]] - ''29 tuber'' - [[30 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,7 +7,6 @@ Ass '''29 [[tuber]]''' d ass {{exp|wis}}302 n useggas ({{exp|wis}}303 deg isegga
 |commons=Category:29 october
 |commons azwel=29 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
