*Empty MediaWiki Message*

--- a/30_tuber.mw
+++ b/30_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''30 [[tuber]]''' d ass {{exp|wis}}303 n useggas ({{exp|wis}}304 deg iseggasen ''bisekstil''). Llan 62 wussan deffir-s ar taggara n useggas.
+Ass '''30 [[tuber]]''' d ass wis 303 n useggas (wis 304 deg iseggasen ''bisekstil''). Llan 62 wussan deffir-s ar taggara n useggas.
 <center>[[29 tuber]] - ''30 tuber'' - [[31 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,7 +7,6 @@ Ass '''30 [[tuber]]''' d ass {{exp|wis}}303 n useggas ({{exp|wis}}304 deg isegga
 |commons=Category:30 october
 |commons azwel=30 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
