--- a/Amekdad.mw
+++ b/Amekdad.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Amekdad''' ([[isem usnan]]: ''Castor'') d [[aɣersiw]] [[Timseɣẓaẓ|amseɣẓaẓ]] yeṭṭafaren [[Tawacult tasnudert|tawacult]] n [[Timekdadin|tmekdadin]], Yettidir deg [[angu|yenga]] id ixeddem s [[asɣaṛ|yesɣaṛen]] igezzem s [[Tuɣmest|tuɣmas]]-is imesden (qeṭṭiɛen).
+'''Amekdad''' ('''[[Assaɣ ussnan]]''': ''Castor'') d [[aɣersiw]] [[Timseɣẓaẓ|amseɣẓaẓ]] yeṭṭafaren [[Tawacult (tasnudert)|tawacult]] n [[Timekdadin|tmekdadin]], Yettidir deg [[angu|yenga]] id ixeddem s [[asɣaṛ|yesɣaṛen]] i gezzem s [[Tuɣmest|tuɣmas]]-is imesden (qeṭṭiɛen).
 
 == Tarrawt ==
 Tettarw-d [[tawtemt]] n umekdad gar n 2 ar 3 n [[aknuz|yeknaz]] deg [[tadist]] yettawin azal n 60 n wussan, Tesseṭuṭ-iten i 3 n [[ayyur (Akud)|wayyuren]].
