*Empty MediaWiki Message*

--- a/Agru.mw
+++ b/Agru.mw
@@ -11,6 +11,20 @@ Igra d imqerqar ttusisemlen deg 3 n [[adu-tfesna|idu-fesniwen]] igan d: [[igramz
 
 == Umuɣ n twaculin ==
 
+== [[Tasnettit]] (etymology) ==
+
+== [[Tasnasileɣt]] d [[tasengamt|tsengamt]] ==
+
+== [[Tareygama]] d tikeli ==
+
+== Taẓuni tarakalt d ideggan n tudert ==
+
+== Tamhazt == 
+
+== Amezruy amhazan ==
+
+== [[Tasnawsijint]] (Phylogenetics) ==
+
 == Ẓeṛ daɣen ==
 * [[Amqerqur]]
 
