*Empty MediaWiki Message*

--- a/Agru.mw
+++ b/Agru.mw
@@ -25,6 +25,8 @@ Igra d imqerqar ttusisemlen deg 3 n [[adu-tfesna|idu-fesniwen]] igan d: [[igramz
 
 == [[Tasnawsijint]] (Phylogenetics) ==
 
+== Agru deg yidles alsan ==
+
 == Ẓeṛ daɣen ==
 * [[Amqerqur]]
 
