*Empty MediaWiki Message*

--- a/Amdeɣ.mw
+++ b/Amdeɣ.mw
@@ -6,6 +6,7 @@
 Talmest-a d tin yettwaggzen s umihi n wengar anda amdan-is seg 1985 ar 2015 yudr-d s 40% 
 
 == Aglam ==
+Amdeɣ iga d aɣersiw [[Tamsartut tamirant|amiran]] yeflalen (ɛlayen) yakk, S tmella (s lfḍel) n yiri-ynes ɣezzifen yettawṭen deg teɣzi seg 5,50 m ar 5,80 m
 
 == Ẓeṛ daɣen ==
 
