*Empty MediaWiki Message*

--- a/Agurres.mw
+++ b/Agurres.mw
@@ -1,7 +1,7 @@
-'''Agurres''' d irem [[tasengama|asengam]] id yesskanayen tamhelt n [[addaden n tenga|tuɣalin]] n [[amazzal|umazzal]] ar [[addad aquran|tɣuṛi]] mi ara ad tiweṭ [[Taẓɣelt|twẓɣelt-is]] ar tseddart n ugurres (seg 0° d taksart i [[aman|waman]]), Anemgak n ugurres d [[afsay]] anda yettuɣal waddad aquran ar umazzal <br/>
+'''Agurres''' d irem [[tasengama|asengam]] id yesskanayen tamhelt n [[addaden n tenga|tuɣalin]] n [[amazzal|umazzal]] ar [[addad aquran|tɣuṛi]] mi ara ad tiweṭ [[Taẓɣelt|teẓɣelt-is]] ar tseddart n ugurres (seg 0° d taksart i [[aman|waman]]), Anemgal n ugurres d [[afsay]] anda yettuɣal waddad aquran ar umazzal <br/>
 Tamhelt-a tettili-d mi ara ad tettwasder [[Taẓɣelt|tezɣelt]] alamma tewweṭ ar [[tiẓunt n wefsay|tẓunt n wefsay]] anagar yiwen n waddad igan d [[Hidṛujin]] i yettɣarayen s usrag n [[adad|wadad]] (mači s [[aẓɣal|uzɣal]]) 
 
-Taseddart n wefsay deg wazal ameqran n [[tanga|tnegwa]] d nettat i d taseddart n tɣuṛi amdya [[aɣir]] yettɣaray deg tseddart n 1084,62 C° maca ifessi daɣen deg yiwet n tseddart dgi yettɣaray 
+Taseddart n wefsay deg wazal ameqran n [[tanga|tnegwa]] d nettat i d taseddart n tɣuṛi amdya [[aɣir]] yettɣaray deg tseddart n 1084,62 C° maca ifessi daɣen deg yiwet n tseddart dgi yettɣaray
 
 == Agurres n unagraw imisin ==
 
