*Empty MediaWiki Message*

--- a/Amdeɣ.mw
+++ b/Amdeɣ.mw
@@ -6,7 +6,10 @@
 Talmest-a d tin yettwaggzen s umihi n wengar anda amdan-is seg 1985 ar 2015 yudr-d s 40% 
 
 == Aglam ==
-Amdeɣ iga d aɣersiw [[Tamsartut tamirant|amiran]] yeflalen (ɛlayen) yakk, S tmella (s lfḍel) n yiri-ynes ɣezzifen yettawṭen deg teɣzi seg 5,50 m ar 5,80 m
+Amdeɣ iga d aɣersiw [[Tamsartut tamirant|amiran]] yeflalen (ɛlayen) yakk, S tmella (s lfḍel) n yiri-ynes ɣezzifen yettawṭen deg teɣzi seg 5,50 m ar 5,80 m, ɣas akken iri-ynes ɣezzif anect-a yakk maca amdan n [[takerduft|tkerdufin-is]] d win yegdan amdan n tkerdufin ɣer yakk [[timsuṭad]] n iden (7 i wazal n 40 cm), [[Azuk]] n umdeɣ yettili gar n 750 ar 1100 kg ɣer [[tawtemt|twetmin]] akken i yezmer ad yiweṭ ar 2000 kg ɣer [[awtem|iwetmen]] 
+
+== Ideggan n tudert ==
+Ideggan n tudert n umdeɣ d win igan d imuren ur yeddukel ara, tiɣerfin-is mnizwin-t, Seg [[Ččad]] deg Ugafa ar [[Tafriqt n  wenẓul]] deg unẓul, Maca s umata ttilin-t s tuget deg [[Kenya]] d [[Tanzanya]] d [[Butswana]] d [[Zambya]] yakk d [[Nnijer]], ideggan i tra (i tḥemmel) ad tt-idir degsen d [[alma|ilmayen]] yeldin d Sabana yakk d [[amadaɣ|imudaɣ]], Učči-ynes agejdan d [[iferr|iferran]] n yiwen n [[aseklu|waddag]] isem-is [[afagag]] anda tkessu dges deg teflelt ur tt-iwṭent ara ɣures [[tisuṭad]] n iden
 
 == Ẓeṛ daɣen ==
 
