*Empty MediaWiki Message*

--- a/Amdeɣ.mw
+++ b/Amdeɣ.mw
@@ -17,3 +17,4 @@ Ideggan n tudert n umdeɣ d win igan d imuren ur yeddukel ara, tiɣerfin-is mniz
 [[Category:tisenfednin]]
 [[Category:timesluffaẓ]]
 [[Category:Timestuga]]
+[[Category:Timsuṭad]]
