*Empty MediaWiki Message*

--- a/Amdeɣ.mw
+++ b/Amdeɣ.mw
@@ -11,6 +11,10 @@ Amdeɣ iga d aɣersiw [[Tamsartut tamirant|amiran]] yeflalen (ɛlayen) yakk, S t
 == Ideggan n tudert ==
 Ideggan n tudert n umdeɣ d win igan d imuren ur yeddukel ara, tiɣerfin-is mnizwin-t, Seg [[Ččad]] deg Ugafa ar [[Tafriqt n  wenẓul]] deg unẓul, Maca s umata ttilin-t s tuget deg [[Kenya]] d [[Tanzanya]] d [[Butswana]] d [[Zambya]] yakk d [[Nnijer]], ideggan i tra (i tḥemmel) ad tt-idir degsen d [[alma|ilmayen]] yeldin d Sabana yakk d [[amadaɣ|imudaɣ]], Učči-ynes agejdan d [[iferr|iferran]] n yiwen n [[aseklu|waddag]] isem-is [[afagag]] anda tkessu dges deg teflelt ur tt-iwṭent ara ɣures [[tisuṭad]] n iden
 
+== Asismel d tsartut ==
+
+'''Tufrart d temhazt''' <br/>
+
 == Ẓeṛ daɣen ==
 
 [[Category:iɣersiwen]]
