*Empty MediaWiki Message*

--- a/Amdeɣ.mw
+++ b/Amdeɣ.mw
@@ -14,6 +14,7 @@ Ideggan n tudert n umdeɣ d win igan d imuren ur yeddukel ara, tiɣerfin-is mniz
 == Asismel d tsartut ==
 
 '''Tufrart d temhazt''' <br/>
+Amdeɣ d aɣersiw yeṭṭafaren [[Adu-tfesna]] n [[timesluffaẓ|tmesluffaẓ]], Anda id tessken tezrawt (taɣuri) d akken aṭas n igmanen-is ttuɣalen iẓuran-is ar ''tallit Tayosint'' deg [[Asya talemmast]] d [[Tamrikt n Ugafa|Marikan n Ugafa]]
 
 == Ẓeṛ daɣen ==
 
