--- a/Azeqziq.mw
+++ b/Azeqziq.mw
@@ -1,2 +1,8 @@
-Deg teqbaylit, "azeqziq" d ageffur-nni ay d-yekkaten s waṭas, s lǧehd. Nezmer ad d-nini : la yekkat uzeqziq neɣ la kkaten yizeqziqen. 
-Ageffur yeqwan neqqar-as daɣen "acercur" neɣ "aberbur" : "Ass-a d ass n yicercuren/n yiberburen, ur yezmir win ara yeffɣen".
+'''Azeqziq''' deg [[tasnignewt|tesnignewt]] d tudra (aṣubbu) n [[aman|waman]] [[aneznez|yettwaneznezn]] s talɣa n [[ageffur|ugeffur]] neɣ n [[adfel|wedfel]], Tasmekta n uzeqziq d tin yemgaraden gar tama ar tayeṭṭ s unect (ɛla ḥsab) n [[anezwu|unezwu]] n yal tama
+
+== Ẓeṛ daɣen ==
+* [[Agris]]
+* [[Abruri]]
+* [[Tasemhuyt]]
+* [[Tagrest]]
+* [[Tafsut]]
