*Empty MediaWiki Message*

--- a/Tutlayin_timaziɣin.mw
+++ b/Tutlayin_timaziɣin.mw
@@ -76,11 +76,11 @@ Deg wakud dgi trajin imaziɣen n tmura n iden asmedded n tutlayt-a deg tmura-nse
 *** [[Dwiret|Tamaziɣt n Dwiret]]
 ** [[Tutlayin timaziɣin n waṭlas]] dgi llant:
 *** [[Tutlayt tacelḥit|Tasusit]]
-*** [[Tamaziɣt n waṭlas alemmas]]
+*** [[Tamaziɣt n weṭlas alemmas]]
 *** [[Taznagt n Srayer]]
 *** [[Taɣumart]]
 *** [[Taseɣrucnit]]
-** [[Tutlayin tiznasiyin]] dgi llan-t:
+** [[Tutlayin tiznasiyin]] dgi llant:
 *** [[Tutlayt tacawit|Tacawit]]
 *** [[Tutlayt tarifit|Tarifit]]
 *** [[Tutlayt tumẓabt|Tumẓabt]]
