*Empty MediaWiki Message*

--- a/Apache.mw
+++ b/Apache.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 Apache d aqeddac HTTP, d yiwen useɣẓan ilelli n Apache Software Foundation. Aqeddac Web neɣ aqeddac HTTP d yiwen wahil iqebblen isutar HTTP sɣur amsaɣ Web (i.e. iminig ɣef Web), dɣa yettafk tiririyin HTTP, s umata d isebtar Web. Gret tamawt, aselkim anda yella wahil aqeddac Web, ula d netta (aselkim-nni) isem-is aqeddac Web!
 
 Asmel unṣib : http://httpd.apache.org/
