*Empty MediaWiki Message*

--- a/Mhenni_Xalifi.mw
+++ b/Mhenni_Xalifi.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Mhenni Xalifi''' d yiwen n yilemẓi i d-yefka Udrar n Fad deg temnaḍṭ n At Smaɛel, ilul deg useggas n 1990. Ɣas yufa-d iman-is d ameɛḍur, ur yettekker ara, maca allaɣ-is ibedd, yenjer abrid n Belɛid At Ɛli d wid icuban ɣur-s imi yesdukkel-iten-t i merra. Yessefra, yura, yecna.
 
 D amedyaz, d amaru, d aneɣmas s tutlayt tayemmatt (taqbaylit) akk d tefransist deg Uɣmis n La Dépêche de Kabylie, d yisebtar n Tiɣremt deg La Cité, d bab n umagrad ‘‘Nnhda n acer » d yimgraden-nniḍen i d-yettawi ɣef yidles d waddal, timetti, adiwen-nni, yimeɛḍar d tejmilin.
@@ -6,14 +7,10 @@ Yekki deg aṭas n temzizlin d tfaskiwin i d-yettilin deg tmurt n Yiqbayliyen ɣ
 
 Yewwi arrazen, yerna yessuffeɣ-d yiwen uḍebsi n ccan azedgan s Teqbaylit anda yekki unaẓur ameqqran Zedek Mulud, yessnulfa-d arraz n umagrad ifazzen ɣef tudert n Dda Lwennas Meɛtub.
 
-'''Ayen yura:'''
- 
--Nnehda d uḥulfu, ammud n yisefra, 2014 
+==Ayen yura==
+*Nnehda d uḥulfu, ammud n yisefra, 2014 
+*Asdawan deg urebbi wusan, ungal, 2014 
+*Nna Geltum, ammud n tulissin, 2016
 
-- Asdawan deg urebbi wusan, ungal, 2014 
-
-- Nna Geltum, ammud n tulissin, 2016
-
-'''Ayen yecna:''' 
-
-- Tifrat, d azwel n uḍebsi n cna (CD), 2015
+== Ayen yecna ==
+*Tifrat, d azwel n uḍebsi n cna (CD), 2015
