*Empty MediaWiki Message*

--- a/Burǧ_Buɛririǧ.mw
+++ b/Burǧ_Buɛririǧ.mw
@@ -1,5 +1,5 @@
 {{Infobox city}}
-'''Burǧ Bu Aɛririǧ''' d tamdint daɣen d tamaneɣt n [[Tawilayt n Burǧ Bu Aɛririǧ|twilayt n Burǧ Bu Aɛririǧ]], imezdaɣ-is xelṭen, llan deg-sen [[Leqbayel]] d [[Aɛraben|waɛraben]]. 
+'''Burǧ Bu Ɛririǧ''' d tamdint daɣen d tamaneɣt n [[Tawilayt n Burǧ Bu Ɛririǧ|twilayt n Burǧ Bu Ɛririǧ]], imezdaɣ-is xelṭen, llan deg-sen [[Leqbayel]] d [[Aɛraben|waɛraben]]. 
 
 [[Taggayt:Timdinin]]
-[[Taggayt:Dzayer]]
+[[Taggayt:Lezzayer]]
