*Empty MediaWiki Message*

--- a/Tiɣiwanin_n_twilayt_n_Burǧ_Buɛririǧ.mw
+++ b/Tiɣiwanin_n_twilayt_n_Burǧ_Buɛririǧ.mw
@@ -1,4 +1,4 @@
-[[Tawilayt n Burǧ Bu Aɛririǧ]] deg [[Tamurt Leqbayel|Tmurt Leqbayel]] tesɛa 34 tiɣiwanin. 
+[[Tawilayt n Burǧ Bu Ɛririǧ]] deg [[Tamurt Leqbayel|Tmurt Leqbayel]] tesɛa 34 tiɣiwanin. 
 {{clr|left}}
 
 == Tiɣiwanin n twilayt n Burǧ Bu Aɛririǧ ==
@@ -14,7 +14,7 @@ Tafelwit agi, tettaked umuɣ n tiɣiwanin n twilayt n Burǧ Bu Aɛririǧ, tettak
 !Tajumma<br /><small>Km²</small><br />&nbsp;<br />
 |----
 |style="text-align:center"|3401
-||[[Burǧ Bu Aɛririǧ]]
+||[[Burǧ Bu Ɛririǧ]]
 |style="text-align:right"|{{smn|168346|6}}
 |style="text-align:right"|{{smn|81.10|5|100}}
 |----
