--- a/Tawilayt_n_Burǧ_Buɛririǧ.mw
+++ b/Tawilayt_n_Burǧ_Buɛririǧ.mw
@@ -5,5 +5,5 @@
 <references/>
 
 [[Taggayt:Tawilayt n Tmurt Leqbayel| ]]
-[[Taggayt:Tawilayt n Dzayer| ]]
-[[Taggayt:Tawilayt n Burǧ Bu Aɛririǧ| ]]
+[[Taggayt:Tawilayt n Lezzayer| ]]
+[[Taggayt:Tawilayt n Burǧ Bu Ɛririǧ| ]]
