*Empty MediaWiki Message*

--- a/Tiɣiwanin_n_twilayt_n_Burǧ_Buɛririǧ.mw
+++ b/Tiɣiwanin_n_twilayt_n_Burǧ_Buɛririǧ.mw
@@ -191,8 +191,8 @@ Tafelwit agi, tettaked umuɣ n tiɣiwanin n twilayt n Burǧ Bu Aɛririǧ, tettak
 
 == Zeṛ daɣen ==
 === Imagraden iqqenen ===
-* [[Tidayrayin n twilayt n Burǧ Bu Aɛririǧ]]
-* [[Tawilayt n Burǧ Bu Aɛririǧ]]
+* [[Tidayrayin n twilayt n Burǧ Bu Ɛririǧ]]
+* [[Tawilayt n Burǧ Bu Ɛririǧ]]
 
 === Izdayen uffiɣen ===
 * [http://www.# Afraq Udbil n Twilayt n Burǧ Bu Aɛririǧ]
