--- a/Tawilayt_n_Tubiret.mw
+++ b/Tawilayt_n_Tubiret.mw
@@ -7,7 +7,7 @@ Tawilayt n Tubiret (s [[Tafrensist|tefrensist]] : Wilaya de Bouira, s [[taɛrabt
 Tawilayt n Tubiret tezga-d deg tmurt n yiqbayliyen, tiwilayin tinaragin i s-d-yezzin :
 
 * Agafa : [[Tawilayt n Bumerdas]] d [[Tawilayt n Tizi Wezzu|twilayt n Tizi wezzu]] ;
-* Agmuḍ : [[Tawilayt n Bgayet]] d [[Tawilayt n Burǧ Bu Aɛririǧ]] ;
+* Agmuḍ : [[Tawilayt n Bgayet]] d [[Tawilayt n Burǧ Bu Ɛririǧ]] ;
 * Anẓul : [[Tawilayt n Msila]] ;
 * Amalu : [[Tawilayt n Blida]] d [[Tawilayt n Mdiyya|twilayt Mdiyya]].
 
