--- a/Tadayra_n_Imceddalen.mw
+++ b/Tadayra_n_Imceddalen.mw
@@ -1,6 +1,6 @@
 {{infobox city}}
 Tadayra n imceddalen (s [[taɛrabt]]: دائرة امشداله, s [[tafrensist|tefransist]]: Daïra de M'Chedallah) d yiwwet n [[Tadayṛa|tdayra]] Taqbaylit i yellan deg [[tawilayt n Tubiret|twilayt n Tubiret]] deg [[Lezzayer]], tamanaɣt-is d tamdint n imceddalen neɣ akken i as-semman iṛumiyen ''Mayu'' (Maillot).<br>
-Tadayra n Imceddalen tezga-d deg usamar n [[Tubiret]], ɣur-s talast akked [[Tawilayt n Tizi Wezzu|twilayt n Tizi Wezzu]] seg ugafa, talast akked [[Tawilayt n Bgayet|twilayt n Bgayet]] d [[Tawilayt n Burǧ Bu Aɛririǧ|twilayt n Burǧ Bu Aɛririǧ]] seg usamar.<br>
+Tadayra n Imceddalen tezga-d deg usamar n [[Tubiret]], ɣur-s talast akked [[Tawilayt n Tizi Wezzu|twilayt n Tizi Wezzu]] seg ugafa, talast akked [[Tawilayt n Bgayet|twilayt n Bgayet]] d [[Tawilayt n Burǧ Bu Ɛririǧ|twilayt n Burǧ Bu Aɛririǧ]] seg usamar.<br>
 
 =Tiɣiwanin=
 Tadayra n Imceddalen ɣur-s sḍis (6) n tɣiwanin:
