*Empty MediaWiki Message*

--- a/Umuɣ_n_tiwilayin_n_Tmurt_Leqbayel.mw
+++ b/Umuɣ_n_tiwilayin_n_Tmurt_Leqbayel.mw
@@ -13,10 +13,8 @@ Tawilayt ddaw tiyeḍ nniḍen:
 
 
 === Afraq n imezdaɣen ===
-
 * [[Tawilayt n Sṭif]] (tis 05), d tin i sɛan amḍan n imezdaɣen i ugaren tiwilayin nniḍen : {{formatnum:1489979}}.
-
-* [[Tawilayt n Borǧ Bu Aṛṛeriǧ]] (tis 02): {{Aferdis|628475|imez.}} (2 tiɣiwanin).
+* [[Tawilayt n Burǧ Bu Ɛririǧ]] (tis 02): {{Aferdis|628475|imez.}} (2 tiɣiwanin).
 
 == Umuɣ n 7 tiwilayin n Tmurt n Iqbayliyen ==
 
@@ -39,7 +37,7 @@ Tafelwit uḍfiṛ i t-efk umuɣ n tiwilayin tiqbayliyin dɣa, i t-efk daɣen, i
 |style="text-align:right"|{{smn|912577|7}}
 |----
 | 02
-||[[Tawilayt n Burǧ Bu Aɛririǧ]]
+||[[Tawilayt n Burǧ Bu Ɛririǧ]]
 |style="text-align:center"|10  
 |style="text-align:center"|34
 |style="text-align:right"|{{smn|4115|6}}
