*Empty MediaWiki Message*

--- a/Tamurt_n_Leqbayel.mw
+++ b/Tamurt_n_Leqbayel.mw
@@ -59,7 +59,7 @@ Seg zik n zik ittwassnen Leqbayel gar igduden nniḍen n umaḍal. Di tallit taq
 == Tarakalt ==
 
 == Tamurt n Yigwawen d aḥric seg idurar n waṭlas teṭṭili ɣef ilel agrakal si tama n ugafa. ==
-Tamurt n Yigawawen ibḍa-tt udabu ɣef 8 n twilaytin : [[Tizi Wezzu]] d [[Bgayet]] akken ma llant, aḥric ameqran n [[Tubiret]] d [[Burǧ Bu Aɛririǧ]], aḥric seg [[Tamsilt]], [[Ǧiǧel]], [[Bumerdas]] d [[Sṭif]].
+Tamurt n Yigawawen ibḍa-tt udabu ɣef 8 n twilaytin : [[Tizi Wezzu]] d [[Bgayet]] akken ma llant, aḥric ameqran n [[Tubiret]] d [[Burǧ Bu Ɛririǧ]], aḥric seg [[Tamsilt]], [[Ǧiǧel]], [[Bumerdas]] d [[Sṭif]].
 
 == Tadamsa ==
 Irmad n tamurt n leqbayel d ul n tadamsa n zzayer m' ur nehdir ara ɣef taɣult n lpitrul d lgaz . ladɣa di tizi wezzu d bgayet akud tiɣermin inaragen .
