*Empty MediaWiki Message*

--- a/Genzat.mw
+++ b/Genzat.mw
@@ -9,11 +9,11 @@
 |Agafa       = [[Tala Legraǧ]]
 |Agafa-Agmuḍ = [[Tala Legraǧ]]
 |Agmuḍ       = [[Ḥerbil|Ḥarbil]]
-|Anẓul-Agmuḍ = [[Zemmura]] ([[Burǧ Bu Aɛririǧ]])
-|Anẓul       = [[Tasammart]] ([[Burǧ Bu Aɛririǧ]])
-|Anẓul-Amalu = [[Tafreg]] ([[Burǧ Bu Aɛririǧ]])
-|Amalu       = [[Ilmayen]] ([[Burǧ Bu Aɛririǧ]])
-|Agafa-Amalu = [[Ilmayen]] ([[Burǧ Bu Aɛririǧ]])
+|Anẓul-Agmuḍ = [[Zemmura]] ([[Burǧ Bu Ɛririǧ]])
+|Anẓul       = [[Tasammart]] ([[Burǧ Bu Ɛririǧ]])
+|Anẓul-Amalu = [[Tafreg]] ([[Burǧ Bu Ɛririǧ]])
+|Amalu       = [[Ilmayen]] ([[Burǧ Bu Ɛririǧ]])
+|Agafa-Amalu = [[Ilmayen]] ([[Burǧ Bu Ɛririǧ]])
 }}
 
 ==Tuddar==
