*Empty MediaWiki Message*

--- a/At_Yeɛla.mw
+++ b/At_Yeɛla.mw
@@ -1,4 +1,5 @@
-At Yaɛla d yiwet taqbilt taqbaylit, tezga-d ar unẓul-ugmuḍ di tmurt n leqbayel deg tillas n yigezda n [[Bgayet]], [[Sṭif]] d [[Burǧ Bu Aɛririǧ]]. 
+{{Databox}}
+At Yaɛla d yiwet taqbilt taqbaylit, tezga-d ar unẓul-ugmuḍ di tmurt n leqbayel deg tillas n yigezda n [[Bgayet]], [[Sṭif]] d [[Burǧ Bu Ɛririǧ]]. 
 
 
 [[Taggayt:Taqbilt]]
