*Empty MediaWiki Message*

--- a/At_Yeɛla.mw
+++ b/At_Yeɛla.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-At Yaɛla d yiwet taqbilt taqbaylit, tezga-d ar unẓul-ugmuḍ di tmurt n leqbayel deg tillas n yigezda n [[Bgayet]], [[Sṭif]] d [[Burǧ Bu Ɛririǧ]]. 
+'''At Yeɛla''' d yiwet taqbilt taqbaylit, tezga-d ar unẓul-ugmuḍ di tmurt n leqbayel deg tillas n yigezda n [[Bgayet]], [[Sṭif]] d [[Burǧ Bu Ɛririǧ]]. 
 
 
 [[Taggayt:Taqbilt]]
