*Empty MediaWiki Message*

--- a/Ḥerbil.mw
+++ b/Ḥerbil.mw
@@ -1,5 +1,5 @@
 {{Infobox city}}
-'''Ḥarbil''' (s tefransist: ''Harbil''), d taɣiwant n utaram (lɣerb) n [[Ṣṭif|Tawilayt n Sṭif]], deg [[Tamurt n Leqbayel|Tmurt n Leqbayel]], zedɣen-tt 3.650 n yimezdaɣen.
+'''Ḥerbil''' (s tefransist: ''Harbil''), d taɣiwant n utaram (lɣerb) n [[Ṣṭif|Tawilayt n Sṭif]], deg [[Tamurt n Leqbayel|Tmurt n Leqbayel]], zedɣen-tt 3.650 n yimezdaɣen.
 
 === Asideg (timella) ===
 {{Tiɣiwanin tinaragin
