*Empty MediaWiki Message*

--- a/Ḥerbil.mw
+++ b/Ḥerbil.mw
@@ -8,9 +8,9 @@
 |Agafa       = [[Tala Legraǧ]]
 |Agafa-Agmuḍ = [[Ḥemmam Gergur]]
 |Agmuḍ       = [[Ḥemmam Gergur]]
-|Anẓul-Agmuḍ = [[Zemmura]] ([[Burǧ Bu Aɛririǧ]])
-|Anẓul       = [[Zemmura]] ([[Burǧ Bu Aɛririǧ]])
-|Anẓul-Amalu = [[Tasammart]] ([[Burǧ Bu Aɛririǧ]])
+|Anẓul-Agmuḍ = [[Zemmura]] ([[Burǧ Bu Ɛririǧ]])
+|Anẓul       = [[Zemmura]] ([[Burǧ Bu Ɛririǧ]])
+|Anẓul-Amalu = [[Tasammart]] ([[Burǧ Bu Ɛririǧ]])
 |Amalu       = [[Genzet]]
 |Agafa-Amalu = [[Genzet]], [[Tala Legraǧ]]
 }}
