*Empty MediaWiki Message*

--- a/At_Wertiran.mw
+++ b/At_Wertiran.mw
@@ -71,8 +71,8 @@ Imezdaɣ n At wertiran d wid yettmeslayen [[Taqbaylit]] seg umeẓyan ar umeqran
 |Agmuḍ       = [[At Cebana]], [[Tala Legraǧ]]
 |Anẓul-Agmuḍ = [[Tala Legraǧ]]
 |Anẓul       = [[Tala Legraǧ]]
-|Anẓul-Amalu = [[Ilmayen]] ([[Burǧ Bu Aɛririǧ]])
-|Amalu       = [[Ilmayen]] ([[Burǧ Bu Aɛririǧ]])
+|Anẓul-Amalu = [[Ilmayen]] ([[Burǧ Bu Ɛririǧ]])
+|Amalu       = [[Ilmayen]] ([[Burǧ Bu Ɛririǧ]])
 |Agafa-Amalu = [[At Wemɛuc]] ([[Tawilayt n Bgayet|Bgayet]])
 }}
 
