*Empty MediaWiki Message*

--- a/Tala_ulegraj.mw
+++ b/Tala_ulegraj.mw
@@ -11,7 +11,7 @@
 |Anẓul-Agmuḍ = [[Ḥemmam Gergur]]
 |Anẓul       = [[Ḥerbil|Ḥarbil]]
 |Anẓul-Amalu = [[Genzet]]
-|Amalu       = [[Ilmayen]] ([[Burǧ Bu Aɛririǧ]])
+|Amalu       = [[Ilmayen]] ([[Burǧ Bu Ɛririǧ]])
 |Agafa-Amalu = [[At Wartilan]]
 }}
 
