--- a/Tiɣiwanin_n_twilayt_n_Burǧ_Buɛririǧ.mw
+++ b/Tiɣiwanin_n_twilayt_n_Burǧ_Buɛririǧ.mw
@@ -195,7 +195,7 @@ Tafelwit agi, tettaked umuɣ n tiɣiwanin n twilayt n Burǧ Bu Aɛririǧ, tettak
 * [[Tawilayt n Burǧ Bu Ɛririǧ]]
 
 === Izdayen uffiɣen ===
-* [http://www.# Afraq Udbil n Twilayt n Burǧ Bu Aɛririǧ]
+* [http://www.# Afraq Udbil n Twilayt n Burǧ Bu Ɛririǧ]
 
-[[Taggayt:Tawilayt n Burǧ Bu Aɛririǧ]]
+[[Taggayt:Tawilayt n Burǧ Bu Ɛririǧ]]
 [[Taggayt:Taɣiwant n Tmurt Leqbayel]]
