*Empty MediaWiki Message*

--- a/Ḥerbil.mw
+++ b/Ḥerbil.mw
@@ -4,7 +4,7 @@
 === Asideg (timella) ===
 {{Tiɣiwanin tinaragin
 |élision     = n
-|Taɣiwant    = Ḥarbil
+|Taɣiwant    = Ḥerbil
 |Agafa       = [[Tala Legraǧ]]
 |Agafa-Agmuḍ = [[Ḥemmam Gergur]]
 |Agmuḍ       = [[Ḥemmam Gergur]]
