([[c:GR|GR]])  [[File:ADN animation.gif]] → [[File:DNA animation.gif]] [[c:COM:FR#FR3|Criterion 3]] (obvious error)

--- a/Tamhazt.mw
+++ b/Tamhazt.mw
@@ -21,7 +21,7 @@ Yella da lɣilaḍ mucaɛen ideg ilaq ad d-nebdu. Tuget n medden seg wid ur nwal
 D acu, mi d-yeffeɣ si twacult tasnudrant iwumi qqaren homonidae, amdan yebda yettenkar ɣef sin iḍarren, yessemras allaɣ-is, ikemmel tamhazt-is deg waṭas imecwaren, segmi yuɣal d tawsit (genre) iwumi qqaren homo : dɣa yella : homo-habilis, uqbel azal n 2 imelyan n lesnin deg Tefriqt usammar d wenẓul  (i isqedcen yakan times, yenjer ablaḍ d amrig yerna yeffeɣ si Tefriqt) ; homo-eretcus uqebel 1,8 imelyan, d netta i ikecmen Turuft ; ma ɣer tagara d homo-sapiens i d-yellan si 300 000 iseggasen, i yuɣalen yettxemmim s tidet, d nekni dɣa akken nella tura ; yella neanderthal ɣer tama-nneɣ deg tewsit homo, iɛac ula deg Turuft, maca winna yenger.
 
 ==Tisura n tesnudert talayant deg tussna n temhazt==
-[[Tugna:ADN animation.gif|thumb|Asider n w ADN (2009)]]
+[[Tugna:DNA animation.gif|thumb|Asider n w ADN (2009)]]
 Iban, akken ad ɛeddint ṣṣifat si tsuta ɣer tayeḍ gar imudar, ilaq kan ad tili tanga  ara tt-yawin. Aya ifhem-it Darwin, maca win i d-yeldin tifrat ɣer tmukrist-a i tikelt tamezwarut, d Uṭrici Mendel (1822 - 1884) i yellan d aqessis (prêtre), d acu yelha-d daɣen d inadiyen-a i iḥemmel, imi tuɣ yeɣra deg tfellaḥt . Dɣa d netta i igan llsas i tussna tamynut ara d-ilalen syin d asawen, iwumi neqqar tajinitit, ulamma imahilen-is ruḥen ttwattun acḥal iseggasen d wamek ɛawden gan-asen ccan. Lḥaṣun, d netta i d-yufan isuḍaf  iwumi qqaren ara assa Isuḍaf n mendel, d ayen yerzan abrid n umcabi gar umudar d baba-s, neɣ jeddi-s, neɣ gma-s (deg yiwet n tsuta) atg. (ad d-nawi fell-as deg umagrad-iḍen). Yerna netta ɣef yimɣan i iga tirmitin-is, meḥsub d ajilban i yebda iteẓẓu-t ɣef waṭas n tikwal armi d-yessufeɣ igmaḍ ineggura.
 Maca wid i d-yesfehmen tajitinit s tidet, d Watson akked  Crick deg useggas n 1953, asmi d-ufan amek yemmug w ADN s tseddi. ADN d alay  asnudran aɣezfan, n uɣurmi (nayau) n tsilunin akked kra ivirusen, deg-s i yettwaxan yisalli ajini s wudem akimyan. Ihi ma zik imusnwen tuɣ zerrfen s tmuɣli kan d ufraẓ n termitin, seg yimir uɣalen sɛan tanga yettwallasen iɣer tcudd kra yellan d ṣṣifa yesɛa umudar, izemren ad ssrewsen seg telmest ɣer tayeḍ ; dɣa tura mačči kan d iusḍaf n Mendel i yuɣalen ttwazrawen s wudem ufrin, ssawḍen yimnuda fehmen yess ula d anda zedɣen kra n waṭṭanen yettɛeddin si tsuta ɣer tayeḍ, ayen ara iɛiwnen i uɛqal-nsen ɣas qbel talalit ; dɣa kka i ssulin ijinumen (génomes) n kra imudar. Ajinum d ayen i d-ijemmlen isallen ijiniyen icudden ɣer kra n telmest, win n wemdan fkan-t-id di 2003. Asmi t-srewsen ɣer win n yibki acampanzi ufan ttamcabin alamma d 99%, ayen yesswehmen lɛamma tamassnant, imi tilawt n temhazt tuɣal tban-d s wanzaten ufrinen, ur d-teqqim ara tettwaḍfar s ifuṣilen kan d tɣessiwin tiqburin, ladaɣa ma neẓra belli widak yettili lexṣas deg-sen ɣas akken ttaken-d isalli iqumen m’ara ilin.
 Yerna am akken yenna Richard Dawkins , win yebɣan kan ad s-d-yessukes kra i tidet-a, ad iruḥ ad d-inadi taɣessa n wemdan ara yesɛun ugar n 8 imelyan di leɛmer ; d lmuḥal, imi amdan tuɣ ur yewwiḍ ara talɣa i nesɛa tura. Kifkif ula i iɣersiwen akk i nessen, aqjun neɣ awtul, ur ttafen iɣsan-nsen ala seg tilla-nni kan mi qqlen s tumelt-nsen n tura.
