*Empty MediaWiki Message*

--- a/Zenzla.mw
+++ b/Zenzla.mw
@@ -1,4 +1,4 @@
-Zenzla d yiwet gar tiwuɣa i derrun g ddunit, ma thuzz tammurt seddaw iḍaren nneɣ, akat ines s taskala n [[Ricter]].
+'''Targaga''' neɣ '''Zzenzla''' (awal n '''zenzla yekka-d seg [[Taɛrabt tadzayrit|Darja]]: ''زنزلة'' id yellan s iman-is seg [[Taɛrabt|Tserɣint]]: ''زلزال'') d yiwet n [[tumant tagmawant]] igan d argigi neɣ d tazrart n irgigiyen yettemyadfaren deg tiggi n tegnit (lqaɛa)
 
 ==Zennazel g ddunit==
 
