*Empty MediaWiki Message*

--- a/Agu.mw
+++ b/Agu.mw
@@ -1,4 +1,7 @@
-'''Agu''' d [[tumant tagmawant]] igan d [[asigna]]  yudren (irxan) ɣef tiggi n [[tagnit|tegnit]], Agu d timiqwa n [[aman|waman]] id yettmagen s usrag n [[aneznez]] n [[arrag|warrag]] n waman 
+[[Tugna:25 de Abril Bridge 2007.jpg|thumb|270px|Agu deg tsukka deg tmurt n [[Portugal]]]]
+
+
+'''Agu''' d [[tumant tagmawant]] igan d [[asigna]]  yudren (irxan) ɣef tiggi n [[tagnit|tegnit]], Agu d timiqwa n [[aman|waman]] id yettmagen s usrag n [[aneznez]] n [[arrag|warrag]] n waman
 
 == Tilmas n wagu ==
 
