Ssefsu tasiwelt 92225 sɣur [[Special:Contributions/Bilalbouyahia|Bilalbouyahia]] ([[User talk:Bilalbouyahia|Meslay]])

--- a/Agdud.mw
+++ b/Agdud.mw
@@ -1,1 +1,7 @@
+'''{{Awalnut|Agdud|ccaɛb}}''' d agraw n yimdanen, wid ittxemmimen ad dukklen s kra n ṣṣifat, [[ddin|ajjed]] neɣ [[amezruy]], tameslayt neɣ idles.
 
+Lmeɛna nniḍen, di [[timettisent]], tesdukkel mačči d [[ahagar|ihagaren]].
+
+Lmeɛna tis tlata, di [[tasertit]], af [[aɣerfan|iɣerfanen]] n yiwen [[aɣlan|weɣlan]].
+
+[[Taggayt:Tarakalt|g]]
