*Empty MediaWiki Message*

--- a/Abanɣu.mw
+++ b/Abanɣu.mw
@@ -1,5 +1,8 @@
 {{Automatic taxobox}}
 
-'''Abanɣu''' (asget: ibanɣuten - s tefrensist: hippopotame), d aɣersiw asuṭṭaḍ (seg tfesna n yimegḍaden), yedder deg [[Tafriqt|Tefriqt]]. Abanɣu yesɛa tafekka d tazurant, d tameqrant yerna ẓẓayet. Ittekk amur ameqran akk seg wakud-nnes deg waman, anda ay ittett imɣan. Imi-nnes d ameqqran aṭas yerna yela uglan d imeqranen ayyes yettnaɣ.
+'''Abanɣu''' neɣ '''Azamur''' ('''[[Assaɣ ussnan]]''': ''Hippopotamus amphibius'') d [[aɣersiw]] [[Timestuga|amestugan]] meqqren s waṭas, yettiddir deg [[Tafriqt|Tefriqt]]. S umata, Abanɣu d yiwet n [[talmest|telmest]] gar snat n telmas id yegran deg [[tawsit (tudersent)|tewsit]] n ubanɣu (talmest n iden d [[abanɣu agezlan]]) <br/>
+Abanɣu d aɣersiw yeggunin ɣef waman deg tudert-is s waṭas anda amur ameqran n wakuden-is yettili-ten s agensu (daxel) n [[asif|isafen]] d [[agelmim|igelmimen]] yellan deg unẓul n [[aneẓruf Ameqran|uneẓruf ameqran]] Ula d [[amercel|amercel-is]] yakk d [[tarrawt|tarrawt-is]] tettili-d s agensu n waman, Zik nni yella yettidir ula deg [[Nnil|wasif n Nnil]] alamma d [[Asif n Urdun]], Abanɣu yettidir deg tegrawin anda yal tagrawt tezmer ad tt-awi azal n 40 n ibanɣuten,Mi ara ad yas wakud n [[adnunnes|udnunnes]] w ad adrent [[taẓɣelt|tseddarin n wezɣal]] itteffeɣ-d seg waman i wakken ad iksu maca ttilin d isufen s tmegla n wass mi ara ad ilin deg waman 
+
+== Aglam ==
 
 [[Category:Aɣersiw]]
