*Empty MediaWiki Message*

--- a/Don_Kicuṭ.mw
+++ b/Don_Kicuṭ.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 [[Tugna:El ingenioso hidalgo don Quijote de la Mancha.jpg|thumb|Taẓrigt tamezwarut n 1606]]
 '''Don Kicuṭ n Manca''' d ungal i yura umyaru aspenyuli [[Miguel de Cervantes]] deg sin yeḥricen (amenzu yeffeɣ-d deg useggas 1606, wis sin deg useggas 1616). Ungal-a yettuneḥsab d win i d amezwru yakk deg tsekla tatrart ɣef leḥsab n tɣara n tira-s d wudem iss i d-yedda deg-s wullis. Yewwi-d deg-s umeskar ɣef yiwen wergaz akken bu-nneyya, iwumi qqaren Don Kicuṭ n Manca<ref>Manca neɣ la Mancha, d tamennaṭ i d-yezgan deg tlemmast n Spanya.</ref> ,  asmi iɛewwl ad yeg am yemnayen iqbuṛen, imi d isaṭṭen<ref>Asaḍ, isaṭṭen : héros.</ref>  iɣef yeɣra deg tektabin. Ameskar yenna-d dɣa seg tazwara : Don Kicuṭ yeɣra yeɣra deg teqsiḍin-nni armi icuf iqerru-s, meḥsub yemxell, ihi iɛedda ad yeḍfer abrid-nsen, ulamma tuɣ tɛedda tallit n yicaliyen am widak.
 
