*Empty MediaWiki Message*

--- a/Abanɣu.mw
+++ b/Abanɣu.mw
@@ -4,7 +4,7 @@
 Abanɣu d aɣersiw yeggunin ɣef waman deg tudert-is s waṭas anda amur ameqran n wakuden-is yettili-ten s agensu (daxel) n [[asif|isafen]] d [[agelmim|igelmimen]] yellan deg unẓul n [[aneẓruf Ameqran|uneẓruf ameqran]] Ula d [[amercel|amercel-is]] yakk d [[tarrawt|tarrawt-is]] tettili-d s agensu n waman, Zik nni yella yettidir ula deg [[Nnil|wasif n Nnil]] alamma d [[Asif n Urdun]], Abanɣu yettidir deg tegrawin anda yal tagrawt tezmer ad tt-awi azal n 40 n ibanɣuten,Mi ara ad yas wakud n [[adnunnes|udnunnes]] w ad adrent [[taẓɣelt|tseddarin n wezɣal]] itteffeɣ-d seg waman i wakken ad iksu maca ttilin d isufen s tmegla n wass mi ara ad ilin deg waman 
 
 == Aglam ==
-[[Tugna:Hippo zoo Lisbon.JPG|thumb 200px|Aqerru n ubanɣu]] 
+[[Tugna:Hippo zoo Lisbon.JPG|thumb|200px|Aqerru n ubanɣu]] 
 
 Abanɣu d yiwen gar [[timsuṭad|temsuṭad]] i zeddiɣ (mazal) llan ttidiren deg [[tagnit|tegnit]] yerna iga d yiwen gar [[abersiw|iɣersiwen icafcalen]] ur [[angar|nengir]] ara, [[Azuk]] agaman n [[awtem|uwtem]] n ubanɣu amawaṭ d win yettawṭen gar n 1500 kg ar 1600 kgma d iwetmen iwessura yezmer ad yaweṭ wazuk-nsen ar 3200 kg, [[tawtemt|tiwetmin]] ttilin-t meẓẓiy-it cwi ɣef iwetmen s wazuk igan gar 1300 kg ar 1500 kg, Ammas n teɣzi n uqerruy-is 3,5 m. Ma d addud ynes ar tuyat 1,5 m ayen yegdan addud n [[Azara amellal|uzara amellal]] dɣa anect-a yesnulfa-d amray (lewɛara) ɣer imusnawen deg usideg n anwa i d [[timsuṭad|asuṭad]] ameqran wis sin seld n [[ilew|yilew]] <br/>
 [[Asirem n tudert]] ɣer ubanɣu d win yessawaṭen seg 40 ar 50 n iseggasen. Maca abanɣu yettusismlen yakk meqqer idder deg [[Lalman]] d tawtemt isem-is ''Tanga'' yemmuten deg useggas n [[1995]] s [[addar|waddar]] n 61 n iseggasen 
