*Empty MediaWiki Message*

--- a/Abanɣu.mw
+++ b/Abanɣu.mw
@@ -11,7 +11,9 @@ Abanɣu d yiwen gar [[timsuṭad|temsuṭad]] i zeddiɣ (mazal) llan ttidiren de
 
 [[Tugna:HippoSkelLyd2.png|thumb|200px|[[taɣessa]] n ubanɣu]]
 
+[[Inzer|Alday n wanzaren]] d [[tiṭṭ|wallen]] d [[ameẓẓuɣ|imeẓẓaɣ]] n ubanɣu zgan-d deg yixef n [[aqecrur|uqecrur]] ayen yettaǧǧan ad yessekcem yakk [[tafekka]]-ynes deg waman d waluṭ n twennaṭ [[anezwu asbegsan|tasbegsant]] izeɣlen i wakken ad yeffer ɣef twaqqsa n tfukt 
 
+== Aẓaṛ d usismel =
 [[Category:Aɣersiw]]
 [[Category:iɣersiwen]]
 [[Category:timsuṭad]]
