*Empty MediaWiki Message*

--- a/Abanɣu.mw
+++ b/Abanɣu.mw
@@ -13,7 +13,7 @@ Abanɣu d yiwen gar [[timsuṭad|temsuṭad]] i zeddiɣ (mazal) llan ttidiren de
 
 [[Inzer|Alday n wanzaren]] d [[tiṭṭ|wallen]] d [[ameẓẓuɣ|imeẓẓaɣ]] n ubanɣu zgan-d deg yixef n [[aqecrur|uqecrur]] ayen yettaǧǧan ad yessekcem yakk [[tafekka]]-ynes deg waman d waluṭ n twennaṭ [[anezwu asbegsan|tasbegsant]] izeɣlen i wakken ad yeffer ɣef twaqqsa n tfukt 
 
-== Aẓaṛ d usismel =
+== Aẓaṛ d usismel ==
 [[Category:Aɣersiw]]
 [[Category:iɣersiwen]]
 [[Category:timsuṭad]]
