*Empty MediaWiki Message*

--- a/Abanɣu.mw
+++ b/Abanɣu.mw
@@ -11,7 +11,9 @@ Abanɣu d yiwen gar [[timsuṭad|temsuṭad]] i zeddiɣ (mazal) llan ttidiren de
 
 [[Tugna:HippoSkelLyd2.png|thumb|200px|[[taɣessa]] n ubanɣu]]
 
-[[Inzer|Alday n wanzaren]] d [[tiṭṭ|wallen]] d [[ameẓẓuɣ|imeẓẓaɣ]] n ubanɣu zgan-d deg yixef n [[aqecrur|uqecrur]] ayen yettaǧǧan ad yessekcem yakk [[tafekka]]-ynes deg waman d waluṭ n twennaṭ [[anezwu asbegsan|tasbegsant]] izeɣlen i wakken ad yeffer ɣef twaqqsa n tfukt 
+[[Inzer|Alday n wanzaren]] d [[tiṭṭ|wallen]] d [[ameẓẓuɣ|imeẓẓaɣ]] n ubanɣu zgan-d deg yixef n [[aqecrur|uqecrur]] ayen yettaǧǧan ad yessekcem yakk [[tafekka]]-ynes deg waman d waluṭ n twennaṭ [[anezwu asbegsan|tasbegsant]] izeɣlen i wakken ad yeffer ɣef twaqqsa n tfukt
+
+Yettwassen ubanɣu s tafekka-ynes [[Awlellu|tawlellayt]] ur nli (ur nesɛi) [[acebbub|azar]] d yiṭarren-is meẓẓiyen d ubleɣ-it acafcal, ɣas akken s ila isefka ayi akk ara ad tyeǧǧen d azayan d agezlan maca yezmer ad yazzel ugar n wemdan, Anda tazzla-ynes tettaweṭ ar 50 km/[[tasragt|ts]]
 
 == Aẓaṛ d usismel ==
 [[Category:Aɣersiw]]
